Some cleanup to 2dm converter